@@ -69,11 +69,17 @@ be_visitor_connector_dds_ex_base::process_template_args (
 {
   AST_Module *m =
     AST_Module::narrow_from_scope (node->defined_in ());
+    
+  while (this->t_inst_ == 0 && m != 0)
+    {
+      this->t_inst_ = m->from_inst ();
+      m = AST_Module::narrow_from_scope (m->defined_in ());
+    }
 
   /// If the connector comes from the instantiation of a
   /// template module, then the regular module it's
   /// defined in will have a reference to it.
-  this->t_inst_ = m->from_inst ();
+//  this->t_inst_ = m->from_inst ();
 
   if (this->t_inst_ == 0)
     {
